@@ -1,3 +1,9 @@
+2006-04-09	Benedikt Meurer <benny@xfce.org>
+
+	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
+	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
+	  is set).
+
 2006-03-12	Benedikt Meurer <benny@xfce.org>
 
 	* po-doc/, Makefile.am, configure.in.in: Apply Daichi's patch to enable
